# deepfake-detector

./: .gitignore  main.py  pyproject.toml
.agent/workflows/: deploy.md
.claude/: settings.local.json
backend/: app.py  face_processor.py  main.py  models.py  pyproject.toml  session.py  traps.py  verify_ws.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/Camera/: Camera.css  CameraSelector.tsx  QualityBanner.tsx  VideoFeed.tsx
frontend/src/components/Controls/: ResetButton.tsx  StartButton.tsx
frontend/src/components/Feedback/: FaceOverlay.css  FaceOverlay.tsx  Feedback.css  LivesDisplay.tsx  VerdictScreen.tsx
frontend/src/components/Traps/: DiscoFlash.tsx  MetricChart.tsx  TrapCard.tsx  TrapManager.tsx  Traps.css
frontend/src/hooks/: useCamera.ts  useGameLoop.ts  useSnapshot.ts  useWebRTC.ts  useWebSocket.ts
frontend/src/types/: schema.ts
