[project]
name = "deepfakedetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "mediapipe==0.10.14",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
